<resources>
    <string name="app_name">Projetsem</string>

    <string name="content_description">image</string>
    <string name="title_login">LOGIN</string>
    <string name="et_hint_email_id">Email ID</string>
    <string name="et_hint_password">Password</string>
    <string name="lbl_forgot_password">forgot password ?</string>
    <string name="btn_lbl_login">Login</string>
    <string name="don_t_have_an_account">don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="application_name">the name</string>

    <string name="create_an_account">CREATE AN ACCOUNT</string>

    <string name="hint_last_name">Last name</string>
    <string name="hint_first_name">First name</string>
    <string name="et_hint_confirm_password">Confirm Password</string>

    <string name="i_agree_to_the_terms_and_conditions">I Agree To The <u>Terms &amp;conditions</u></string>
    <string name="btn_lbl_register">Register</string>

    <string name="already_have_an_account">Already have an acount?</string>
    <string name="login"><u>Login</u></string>

    <string name="err_msg_enter_first_name">Please enter first name.</string>
    <string name="err_msg_enter_last_name">Please enter last name.</string>
    <string name="err_msg_enter_email">Please enter email.</string>
    <string name="err_msg_enter_password">Please enter password.</string>
    <string name="err_msg_enter_confirm_password">Please enter confirm password.</string>
    <string name="err_msg_password_and_confirm_password_mismatch">Password and confirm password mismach</string>
    <string name="err_msg_agree_terms_and_condition">Please agree terms and conditions.</string>
    <string name="please_wait">Please Wait&#8230;</string>

    <string name="title_forgot_password">FORGOT PASSWORD</string>
    <string name="forgot_password_title_description">Enter your username and e-mail
        adress we \' ll send you an email to reset your password</string>
    <string name="btn_lbl_submit">Submit</string>
    <string name="email_sent_success">\"email send successfully to reset your password! \" </string>




</resources>